[tool.poetry]
name = "dynamodb-session-web"
version = "0.1.2"
description = "Contains the core API for a DynamoDB-backed session"
keywords = ["DynamoDB", "Session", "Web"]
authors = ["Jason Capriotti <jason.capriotti@gmail.com>"]
license = "GPL-3.0-only"
include = [
    "LICENSE",
]
readme = "README.md"
homepage = "https://github.com/JCapriotti/dynamodb-session-web"
repository = "https://github.com/JCapriotti/dynamodb-session-web"


[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.21"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-docker = "^0.10.3"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "boto3",
    "botocore.exceptions"
]
ignore_missing_imports = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring, missing-class-docstring, missing-module-docstring"
max-line-length = 120
